--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="section-body about">
             <div class="about-item">
               <div class="about-image-wrapper">
-                <img class="" src="img/about/about-shiori.png" alt="">
+                <img class="" src="img/about/about-shiori.png" alt="写真">
               </div>
               <div class="about-body">
                 <h3 class="mynameJ">小沼 史織　<span class="mynameE">Konuma Shiori</span></h3>　
