--- a/Banana.html
+++ b/Banana.html
@@ -56,7 +56,7 @@
             <div class="process-inner">
               <div class="process-item">
                 <div class="process-image-left">
-                  <img src="img/Banana/fielcam.png" alt="">
+                  <img src="img/banana/fielcam.png" alt="">
                 </div>
                 <div class="process-body">
                   <div class="process-title-bana">
@@ -68,7 +68,7 @@
               </div>
               <div class="process-item">
                 <div class="process-image-left">
-                  <img src="img/Banana/miro-fielcam.png" alt="">
+                  <img src="img/banana/miro-fielcam.png" alt="">
                 </div>
                 <div class="process-body">
                   <div class="process-title-bana">
@@ -87,12 +87,12 @@
                 </div>
                 </div>
                 <div class="process-image-right">
-                  <img src="img/Banana/bana-mokku.png" alt="">
+                  <img src="img/banana/bana-mokku.png" alt="">
                 </div>
               </div>
               <div class="process-item">
                 <div class="process-image-left">
-                  <img src="img/Banana/bana2.png" alt="">
+                  <img src="img/banana/bana2.png" alt="">
                 </div>
                 <div class="process-body">
                   <div class="process-title-bana">
@@ -111,7 +111,7 @@
                 </div>
                 </div>
                 <div class="process-image-right">
-                  <img src="img/Banana/bana-jikken.png" alt="">
+                  <img src="img/banana/bana-jikken.png" alt="">
                 </div>
               </div>
           </div>
