--- a/miraiten.html
+++ b/miraiten.html
@@ -26,7 +26,7 @@
     </nav>
     <!-- /.gnav -->
 
-    <main class="content">
+    <!--<main class="content">
 
       <img src="img/smoozy/smoozy-top1.png" alt=""/>
 
@@ -121,7 +121,7 @@
         </div>
 
 
-    </main>
+    </main>-->
 
     <!-- .footer -->
     <footer class="footer">
