--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div class="about-body">
                 <h3 class="mynameJ">小沼 史織　<span class="mynameE">Konuma Shiori</span></h3>　
                 <p>
-                  公立はこだて未来大学　情報デザインコースに在学<br>
+                  公立はこだて未来大学　情報デザインコース卒業<br>
                   モノづくりやイベントの企画、人と関わること、ストリートダンスが好きな根っからの津軽っ子！<br>
                   ユーザ視点を大切に、ユーザとサービスを両思いにすることを目指しています。
                 </p>
