--- a/medical.html
+++ b/medical.html
@@ -82,7 +82,7 @@
             </div>
             <div class="process-item">
               <div class="process-body">
-                <div class="process-title-aruku">
+                <div class="process-title-medic">
                 <h3>「メディカルサイト」の提案</h3>
                 <p>病院を探す基準となる、診療科目と診療時間、立地などの情報を掲載するWebサイトを提案しました。また函館市の病院を一覧で表示することで各病院のサイトで情報を探す手間を省きました。
                 またWebサイト内に新型コロナウイルスの感染者情報を表示することで、病院へ行くなどの行動の際に予防の意識を高める効果が期待されます。</p>
